Some design fixes

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 		</svg>
 	</a>
 
+	
 	<div id="container">
-		<div id="yohoho" data-resize="1" data-tv="1" data-bg="#000000"></div>
+		<div id="yohoho" data-resize="1" data-bg="#000000" data-loading="loading.webp"></div>
 		<div id="message">Не удалось загрузить плеер</div>
 	</div>
 
