--- a/index.html
+++ b/index.html
@@ -3,34 +3,103 @@
 
 <head>
 	<meta charset="UTF-8">
-	<link rel="icon" href="favicon.png">
+	<link rel="icon" href="assets/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Kinopoisk Watch</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
-	<a id="icon" href="https://github.com/Kirlovon/Kinopoisk-Watch" target="_blank">
-		<svg width="100%" height="100%" viewBox="0 0 64 64" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/"
-			style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
-			<g id="icon" transform="matrix(0.6,0,0,0.6,-44.8,-197.2)">
-				<path
-					d="M168,382C168,360.057 149.943,342 128,342C106.057,342 88,360.057 88,382C88,403.943 106.057,422 128,422L165,422L168,410L162,410L160,414L152,414C162.065,406.452 168,394.581 168,382ZM96,382C96,364.445 110.445,350 128,350C145.555,350 160,364.445 160,382C160,399.555 145.555,414 128,414C110.445,414 96,399.555 96,382ZM128,393C132.415,393 136,396.585 136,401C136,405.415 132.415,409 128,409C123.585,409 120,405.415 120,401C120,396.585 123.585,393 128,393ZM144,383C148.415,383 152,386.585 152,391C152,395.415 148.415,399 144,399C139.585,399 136,395.415 136,391C136,386.585 139.585,383 144,383ZM112,383C116.415,383 120,386.585 120,391C120,395.415 116.415,399 112,399C107.585,399 104,395.415 104,391C104,386.585 107.585,383 112,383ZM144,365C148.415,365 152,368.585 152,373C152,377.415 148.415,381 144,381C139.585,381 136,377.415 136,373C136,368.585 139.585,365 144,365ZM112,365C116.415,365 120,368.585 120,373C120,377.415 116.415,381 112,381C107.585,381 104,377.415 104,373C104,368.585 107.585,365 112,365ZM128,355C132.415,355 136,358.585 136,363C136,367.415 132.415,371 128,371C123.585,371 120,367.415 120,363C120,358.585 123.585,355 128,355Z"
-					style="fill:rgb(235,255,255);fill-rule:nonzero;" />
-			</g>
-		</svg>
+	<a id="logo" href="https://github.com/Kirlovon/Kinopoisk-Watch" target="_blank">
+		<img src="assets/logo.svg">
 	</a>
 
-	
-	<div id="container">
-		<div id="yohoho" data-resize="1" data-bg="#000000" data-loading="loading.webp"></div>
-		<div id="message">Не удалось загрузить плеер</div>
+	<div id="container"></div>
+
+	<div id="actions">
+		<a id="players">Плееры</a>
+		<span>/</span>
+		<a id="torrents">Торренты</a>
 	</div>
 
-	<a id="info" href="https://yohoho.cc/" target="_blank">Powered by Yohoho</a>
-	
-	<script src="script.js"></script>
-	<script src="//yohoho.cc/yo.js"></script>
+	<span id="info">
+		Made with ♥ by <a href="https://github.com/Kirlovon" target="_blank">Kirlovon</a>.
+		Powered by <a href="https://yohoho.cc/" target="_blank">Yohoho</a>.
+	</span>
+
+	<script>
+		const container = document.getElementById('container');
+		const actions = document.getElementById('actions');
+		const torrents = document.getElementById('torrents');
+		const players = document.getElementById('players');
+
+		// Parse params
+		const params = new URLSearchParams(window.location.search);
+		let id = params.get('id');
+		let title = params.get('title');
+
+		// Parse hash for old versions
+		if (window.location.hash !== '') {
+			id = window.location.hash.substring(1);
+			console.error('Вы используете старую версию скрипта! Обновитесь до последней версии! \n https://github.com/Kirlovon/Kinopoisk-Watch')
+		}
+
+		/**
+		 * Switch to players list
+		 */
+		function selectPlayer() {
+			const element = document.createElement('iframe');
+			element.src = `${window.location.pathname}watch.html#${id}`;
+
+			players.classList.add('active');
+			torrents.classList.remove('active');
+
+			container.innerHTML = '';
+			container.appendChild(element);
+		}
+
+		/**
+		 * Switch to torrents list 
+		 */
+		function selectTorrent() {
+			const element = document.createElement('iframe');
+			element.src = `${window.location.pathname}download.html#${title}`;
+
+			players.classList.remove('active');
+			torrents.classList.add('active');
+
+			container.innerHTML = '';
+			container.appendChild(element);
+		}
+
+		// If ID specified
+		if (id) {
+			players.addEventListener('click', selectPlayer);
+		} else {
+			players.classList.add('disabled');
+		}
+
+		// If Title specified
+		if (title) {
+			torrents.addEventListener('click', selectTorrent);
+		} else {
+			torrents.classList.add('disabled');
+		}
+
+		// Show error message if ID & Title are not specified
+		if (!id && !title) {
+			actions.style.display = 'none';
+			container.innerText = 'ID и Название фильма не указаны!'
+		}
+
+		// Init
+		if (id) {
+			selectPlayer();
+		} else if (title) {
+			selectTorrent();
+		}
+
+	</script>
 </body>
 
 </html>
