--- a/watch.html
+++ b/watch.html
@@ -30,7 +30,7 @@
 	<script>
 		const yohoho = document.getElementById('yohoho');
 		const id = window.location.hash.replace(/\D/g, '');
-		yohoho.setAttribute('data-kinopoisk', decodeURI(id));
+		yohoho.setAttribute('data-kinopoisk', id);
 	</script>
 
 	<script src="//yohoho.cc/yo.js"></script>
