--- a/download.html
+++ b/download.html
@@ -29,8 +29,8 @@
 
 	<script>
 		const yohoho = document.getElementById('yohoho');
-		const id = window.location.hash.replace(/\D/g, '');
-		yohoho.setAttribute('data-title', decodeURI(id));
+		const title = window.location.hash.replace(/\D/g, '');
+		yohoho.setAttribute('data-title', decodeURI(title));
 	</script>
 
 	<script src="//yohoho.cc/yo.js"></script>
