--- a/watch.html
+++ b/watch.html
@@ -29,7 +29,7 @@
 
 	<script>
 		const yohoho = document.getElementById('yohoho');
-		const id = window.location.hash.replace(/\D/g, '');
+		const id = window.location.hash.substring(1);
 		yohoho.setAttribute('data-kinopoisk', id);
 	</script>
 
